Ads ids added (Banner, Interstitial). Config file added. Some minor changes.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#10B3A1</color>
     <color name="colorPrimaryDark">#5ECCBD</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="ic_launcher_background">#EBEBEB</color>
 </resources>
