--- a/app/src/main/res/layout/activity_show_note.xml
+++ b/app/src/main/res/layout/activity_show_note.xml
@@ -11,15 +11,14 @@
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="2dp"
-        android:layout_marginTop="2dp"
-        android:layout_marginBottom="1dp"
-        android:ems="10"
+        android:background="@android:color/transparent"
         android:gravity="start|top"
         android:hint="@string/write_something_here"
         android:importantForAutofill="no"
         android:inputType="textMultiLine"
+        android:padding="8dp"
         android:textAlignment="textStart" />
 
 </RelativeLayout>
