Title adding added. Too long msg issue fixed.

--- a/app/src/main/res/layout/activity_show_note.xml
+++ b/app/src/main/res/layout/activity_show_note.xml
@@ -6,11 +6,26 @@
     tools:context=".ShowNote">
 
     <EditText
+        android:id="@+id/titleEditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#FFFFFF"
+        android:minHeight="32dp"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        android:paddingTop="16dp"
+        android:paddingBottom="8dp"
+        android:maxLength="36"
+        android:fontFamily="sans-serif-black"
+        android:maxLines="1"
+        android:hint="@string/title" />
+
+    <EditText
         android:id="@+id/editText"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@+id/titleEditText"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:background="@android:color/transparent"
